--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node server/index.js"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "mongodb": "^3.1.0"
   },
   "devDependencies": {
