--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb": "^3.1.0"
   },
   "devDependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "formidable": "^1.2.1"
   }
 }
