--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "express": "^4.16.3",
-    "formidable": "^1.2.1"
+    "formidable": "^1.2.1",
+    "openssl-self-signed-certificate": "^1.1.6"
   }
 }
